email ts and logger modifications

--- a/lib.email/.nycrc
+++ b/lib.email/.nycrc
@@ -1,16 +1,1 @@
-{
-    "include": [
-        "lib/**/*.js"
-    ],
-    "reporter": [
-        "html",
-        "text",
-        "text-summary"
-    ],
-    "require": [
-        "esm"
-    ],
-    "check-coverage": false,
-    "cache": true,
-    "instrument": true
-}
+{"all":true,"include":["lib"],"extension":[".ts"],"reporter":["html","text","text-summary"]}
