--- a/lib.utils/package.json
+++ b/lib.utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib.utils",
+  "name": "@marin/lib.utils",
   "description": "Utility functions and shared constants",
   "keywords": [
     "utils",
