--- a/lib.auth/package.json
+++ b/lib.auth/package.json
@@ -16,12 +16,12 @@
     },
     "dependencies": {
         "@marin/lib.email": "file:../lib.email",
-        "@marin/lib.error": "git+ssh://git@github.com/marinrusu1997/lib.error.git",
+        "@marin/lib.error": "file:../lib.error",
         "@marin/lib.jwt": "file:../lib.jwt",
         "@marin/lib.logger": "file:../lib.logger",
         "@marin/lib.sms": "file:../lib.sms",
         "@marin/lib.utils": "file:../lib.utils",
-        "argon2": "^0.25.0",
+        "@marin/lib.memcache": "file:../lib.memcache",
         "optional-js": "^2.1.1",
         "owasp-password-strength-test": "^1.3.0",
         "xstate": "^4.6.7"
