--- a/lib.email/.mocharc.json
+++ b/lib.email/.mocharc.json
@@ -1,10 +1,1 @@
-{
-    "exit": true,
-    "color": true,
-    "recursive": true,
-    "watch": true,
-    "require": "esm",
-    "spec": [
-        "test/**/*.spec.js"
-    ]
-}
+{"exit":true,"color":true,"recursive":true,"watch":true,"watch-extensions":["ts"],"require":["esm","ts-node/register"],"spec":["test/**/*.spec.ts"]}
