Build TS modules using Gulp

--- a/lib.email/.nycrc
+++ b/lib.email/.nycrc
@@ -1,1 +1,6 @@
-{"all":true,"include":["lib"],"extension":[".ts"],"reporter":["html","text","text-summary"]}
+{
+    "all": true,
+    "include": ["lib"],
+    "extension": [".ts"],
+    "reporter": ["html","text","text-summary"]
+}
