--- a/lib.email/.eslintrc
+++ b/lib.email/.eslintrc
@@ -1,1 +1,64 @@
-{"root":true,"env":{"es6":true,"node":true},"extends":["airbnb-base","plugin:@typescript-eslint/recommended","plugin:prettier/recommended","prettier/@typescript-eslint"],"plugins":["@typescript-eslint"],"rules":{"prettier/prettier":"error","import/prefer-default-export":"off","no-param-reassign":"warn","no-use-before-define":"warn","@typescript-eslint/no-use-before-define":"warn","@typescript-eslint/no-namespace":"off"},"globals":{"Atomics":"readonly","SharedArrayBuffer":"readonly"},"parser":"@typescript-eslint/parser","parserOptions":{"ecmaVersion":2018,"sourceType":"module","project":"./tsconfig.json"},"settings":{"import/extensions":[".js",".jsx",".ts",".tsx"],"import/parsers":{"@typescript-eslint/parser":[".ts",".tsx"]},"import/resolver":{"node":{"extensions":[".js",".jsx",".ts",".tsx"]}}}}
+{
+  "root": true,
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "extends": [
+    "airbnb-base",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "prettier/@typescript-eslint"
+  ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
+    "no-param-reassign": "warn",
+    "no-use-before-define": "warn",
+    "@typescript-eslint/no-use-before-define": "warn",
+    "@typescript-eslint/no-namespace": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "ts": "never",
+        ".d.ts": "never"
+      }
+    ]
+  },
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2019,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "import/extensions": [
+      ".js",
+      ".ts",
+      ".d.ts"
+    ],
+    "import/parsers": {
+      "@typescript-eslint/parser": [
+        ".ts"
+      ]
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".ts",
+          ".d.ts"
+        ]
+      }
+    }
+  }
+}
