Added authenticate operation

--- a/lib.auth/.nycrc
+++ b/lib.auth/.nycrc
@@ -1,16 +1,14 @@
 {
+    "all": true,
     "include": [
-        "lib/**/*.js"
+        "lib"
+    ],
+    "extension": [
+        ".ts"
     ],
     "reporter": [
         "html",
         "text",
         "text-summary"
-    ],
-    "require": [
-        "esm"
-    ],
-    "check-coverage": false,
-    "cache": true,
-    "instrument": true
+    ]
 }
