--- a/lib.auth/.prettierrc
+++ b/lib.auth/.prettierrc
@@ -1,11 +1,10 @@
 {
-  "printWidth": 120,
-  "tabWidth": 4,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "semi": true,
-  "useTabs": true,
-  "parser": "typescript",
-  "jsxBracketSameLine": false
+    "printWidth": 160,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "semi": true,
+    "useTabs": true,
+    "parser": "typescript"
 }
