--- a/lib.auth/package.json
+++ b/lib.auth/package.json
@@ -1,47 +1,65 @@
 {
-    "name": "@marin/lib.auth",
+    "name": "lib.auth",
+    "description": "Modular authentication library",
+    "keywords": [
+        "auth"
+    ],
     "version": "1.0.0",
-    "description": "Auth Lib",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "main": "lib/index.js",
+    "license": "ISC",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist/**/*"
+    ],
     "scripts": {
-        "start": "node -r esm lib/index.js",
-        "lint": "eslint --fix lib/ test/",
-        "test": "mocha -r esm",
+        "lint": "eslint \"lib/**/*\" \"test/**/*\" --fix",
+        "test": "mocha",
         "coverage": "nyc mocha",
-        "build": "eslint lib/ test/ && npm run test",
         "coverage:show": "http-server coverage/",
-        "clean": "rm -rf .nyc_output coverage",
-        "clean:all": "rm -rf .nyc_output coverage node_modules package-lock.json"
+        "clear": "rm -rf .nyc_output build coverage dist",
+        "clear:all": "npm run clean; rm -rf node_modules package-lock.json"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint"
+        ]
+    },
+    "engines": {
+        "node": "12.8.0"
     },
     "dependencies": {
-        "@marin/lib.email": "file:../lib.email",
         "@marin/lib.error": "file:../lib.error",
-        "@marin/lib.jwt": "file:../lib.jwt",
         "@marin/lib.logger": "file:../lib.logger",
-        "@marin/lib.sms": "file:../lib.sms",
         "@marin/lib.utils": "file:../lib.utils",
-        "@marin/lib.memcache": "file:../lib.memcache",
-        "optional-js": "^2.1.1",
+        "argon2": "^0.25.1",
         "owasp-password-strength-test": "^1.3.0",
-        "xstate": "^4.6.7"
+        "geoip-lite": "1"
     },
     "devDependencies": {
+        "@marin/lib.email": "file:../lib.email",
+        "@marin/lib.jwt": "file:../lib.jwt",
+        "@marin/lib.module-builder": "file:../lib.module-builder",
+        "@marin/lib.sms": "file:../lib.sms",
+        "@types/agenda": "^2.0.6",
+        "@types/chai": "^4.2.7",
+        "@types/geoip-lite": "1",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^13.1.0",
+        "@types/owasp-password-strength-test": "^1.3.0",
+        "@typescript-eslint/eslint-plugin": "^2.13.0",
+        "@typescript-eslint/parser": "^2.13.0",
         "chai": "^4.2.0",
-        "chai-arrays": "^2.0.0",
-        "chai-as-promised": "^7.1.1",
-        "eslint": "^6.4.0",
+        "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.3.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-config-prettier": "^6.8.0",
+        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
-        "mocha": "^6.2.0",
-        "nyc": "^14.1.1",
-        "prettier": "^1.18.2"
-    },
-    "type": "module",
-    "engines": {
-        "node": "12.x"
+        "mocha": "^6.2.2",
+        "nyc": "^15.0.0",
+        "prettier": "^1.19.1",
+        "ts-node": "^8.5.4",
+        "typescript": "^3.7.4"
     }
 }
