--- a/lib.jwt/package.json
+++ b/lib.jwt/package.json
@@ -21,6 +21,8 @@
         "typescript-collections": "^1.3.2"
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^8.3.5",
+        "@types/passport-strategy": "^0.2.35",
         "bluebird": "^3.5.5",
         "chai": "^4.2.0",
         "chai-arrays": "^2.0.0",
