--- a/lib.auth/package.json
+++ b/lib.auth/package.json
@@ -39,12 +39,14 @@
     "devDependencies": {
         "@marin/lib.email": "file:../lib.email",
         "@marin/lib.jwt": "file:../lib.jwt",
+        "@marin/lib.memcache": "file:../lib.memcache",
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@marin/lib.sms": "file:../lib.sms",
         "@types/agenda": "^2.0.6",
         "@types/chai": "^4.2.7",
         "@types/geoip-lite": "1",
         "@types/mocha": "^5.2.7",
+        "@types/mongoose": "^5.5.36",
         "@types/node": "^13.1.0",
         "@types/owasp-password-strength-test": "^1.3.0",
         "@typescript-eslint/eslint-plugin": "^2.13.0",
@@ -57,6 +59,8 @@
         "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
         "mocha": "^6.2.2",
+        "mongodb-memory-server": "^6.2.1",
+        "mongoose": "^5.8.3",
         "nyc": "^15.0.0",
         "prettier": "^1.19.1",
         "ts-node": "^8.5.4",
