--- a/lib.email/.eslintrc
+++ b/lib.email/.eslintrc
@@ -38,7 +38,7 @@
   "parserOptions": {
     "ecmaVersion": 2019,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "tsconfig.json"
   },
   "settings": {
     "import/extensions": [
