--- a/lib.email/tsconfig.json
+++ b/lib.email/tsconfig.json
@@ -5,10 +5,10 @@
         "module": "esnext",
         "allowJs": true,
         "declaration": true,
-        "rootDir": "lib",
+        "rootDir": ".",
         "outDir": "dist",
         "composite": true,
-        "tsBuildInfoFile": "./build/tsbuildinfo",
+        "tsBuildInfoFile": "build/tsbuildinfo",
         "removeComments": false,
         "strict": true,
         "noImplicitAny": true,
@@ -28,8 +28,8 @@
         "experimentalDecorators": true
     },
     "include": [
-        "lib",
-        "test"
+        "lib/**/*.ts",
+        "test/**/*.ts"
     ],
     "exclude": [
         "node_modules",
