--- a/lib.auth/package.json
+++ b/lib.auth/package.json
@@ -13,7 +13,12 @@
         "dist/**/*"
     ],
     "scripts": {
-        "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix"
+        "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
+        "test": "gulp test",
+        "coverage": "gulp coverage",
+        "coverage:show": "gulp coverageShow",
+        "clean": "gulp clean",
+        "purge": "gulp purge"
     },
     "lint-staged": {
         "*.ts": [
