--- a/lib.jwt/package.json
+++ b/lib.jwt/package.json
@@ -4,8 +4,9 @@
     "description": "JWT Auth Lib",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "lib/index.js",
+    "typings": "lib/index.d.ts",
     "scripts": {
-        "lint": "eslint --fix lib/ test/",
+        "lint": "eslint --fix lib/**/*.js test/**/*.js",
         "test": "mocha -r esm",
         "coverage": "nyc mocha",
         "build": "eslint lib/ test/ && npm run test",
