--- a/lib.memcache/package.json
+++ b/lib.memcache/package.json
@@ -16,7 +16,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "lint": "eslint \"lib/**/*\" \"test/**/*\" --fix",
+    "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
     "build": "tsc; rm -rf dist/test",
     "test": "mocha",
     "coverage": "nyc mocha",
