--- a/lib.sms/package.json
+++ b/lib.sms/package.json
@@ -5,7 +5,7 @@
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "lib/index.js",
     "scripts": {
-        "lint": "eslint --fix lib/ test/",
+        "lint": "eslint --fix lib/**/*.js test/**/*.js",
         "test": "mocha -r esm",
         "coverage": "nyc mocha",
         "build": "eslint lib/ test/ && npm run test",
@@ -18,6 +18,7 @@
         "chai": "^4.2.0",
         "chai-arrays": "^2.0.0",
         "chai-as-promised": "^7.1.1",
+        "dotenv": "^8.2.0",
         "eslint": "^6.6.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.4.0",
