--- a/lib.logger/package.json
+++ b/lib.logger/package.json
@@ -5,7 +5,7 @@
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "lib/index.js",
     "scripts": {
-        "lint": "eslint --fix lib/ test/",
+        "lint": "eslint --fix lib/**/*.js test/**/*.js",
         "test": "mocha -r esm",
         "coverage": "nyc mocha",
         "build": "eslint lib/ test/ && npm run test",
