--- a/lib.utils/.prettierrc
+++ b/lib.utils/.prettierrc
@@ -1,1 +1,10 @@
-{"printWidth":160,"tabWidth":4,"singleQuote":true,"trailingComma":"none","bracketSpacing":true,"semi":true,"useTabs":true,"parser":"typescript"}
+{
+  "printWidth": 180,
+  "tabWidth": 4,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "semi": true,
+  "useTabs": true,
+  "parser": "typescript"
+}
