--- a/lib.utils/.mocharc.json
+++ b/lib.utils/.mocharc.json
@@ -1,1 +1,16 @@
-{"exit":true,"color":true,"recursive":true,"watch":true,"watch-extensions":["ts"],"require":["esm","ts-node/register"],"spec":["test/**/*.spec.ts"]}
+{
+  "exit": true,
+  "color": true,
+  "recursive": true,
+  "watch": true,
+  "watch-extensions": [
+    "ts"
+  ],
+  "require": [
+    "esm",
+    "ts-node/register"
+  ],
+  "spec": [
+    "test/**/*.spec.ts"
+  ]
+}
