--- a/lib.utils/.nycrc
+++ b/lib.utils/.nycrc
@@ -1,1 +1,14 @@
-{"all":true,"include":["lib"],"extension":[".ts"],"reporter":["html","text","text-summary"]}
+{
+  "all": true,
+  "include": [
+    "lib"
+  ],
+  "extension": [
+    ".ts"
+  ],
+  "reporter": [
+    "html",
+    "text",
+    "text-summary"
+  ]
+}
