--- a/lib.auth-engine/package.json
+++ b/lib.auth-engine/package.json
@@ -18,6 +18,7 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "test": "gulp test",
+        "debug": "gulp debug",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "clean": "gulp clean",
