--- a/lib.auth-engine/.eslintrc
+++ b/lib.auth-engine/.eslintrc
@@ -22,6 +22,7 @@
         "lines-between-class-members": "off",
         "class-methods-use-this": "warn",
         "no-underscore-dangle": "warn",
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "@typescript-eslint/ban-ts-ignore": "warn",
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/no-namespace": "warn",
