--- a/lib.auth-engine/package.json
+++ b/lib.auth-engine/package.json
@@ -61,6 +61,7 @@
         "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
+        "keypair": "^1.0.1",
         "mocha": "^6.2.2",
         "mongodb-memory-server": "^6.2.1",
         "mongoose": "^5.8.3",
