--- a/lib.firewall/.eslintrc
+++ b/lib.firewall/.eslintrc
@@ -18,7 +18,9 @@
         "import/prefer-default-export": "off",
         "no-param-reassign": "warn",
         "no-use-before-define": "warn",
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "@typescript-eslint/no-use-before-define": "warn",
+        "@typescript-eslint/ban-ts-ignore": "warn",
         "@typescript-eslint/no-namespace": "off",
         "import/extensions": [
             "error",
