Authenticate and Register JSON Schemas

--- a/lib.firewall/.eslintrc
+++ b/lib.firewall/.eslintrc
@@ -18,6 +18,7 @@
         "import/prefer-default-export": "off",
         "no-param-reassign": "warn",
         "no-use-before-define": "warn",
+        "no-await-in-loop": "warn",
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/ban-ts-ignore": "warn",
