--- a/lib.firewall/package.json
+++ b/lib.firewall/package.json
@@ -19,6 +19,7 @@
         "build": "gulp build",
         "test": "gulp test",
         "coverage": "gulp coverage",
+        "clean": "gulp clean",
         "purge": "gulp purge"
     },
     "lint-staged": {
