--- a/lib.auth-controller/tsconfig.json
+++ b/lib.auth-controller/tsconfig.json
@@ -4,8 +4,9 @@
         "target": "esnext",
         "module": "esnext",
         "allowJs": true,
+        "checkJs": true,
         "declaration": true,
-        "rootDir": ".",
+        "rootDir": "lib",
         "outDir": "dist",
         "composite": true,
         "tsBuildInfoFile": "build/tsbuildinfo",
@@ -28,8 +29,7 @@
         "experimentalDecorators": true
     },
     "include": [
-        "lib/**/*.ts",
-        "test/**/*.ts"
+        "lib/**/*.ts"
     ],
     "exclude": [
         "node_modules",
