--- a/lib.geoip/.eslintrc
+++ b/lib.geoip/.eslintrc
@@ -18,6 +18,8 @@
         "import/prefer-default-export": "off",
         "no-param-reassign": "warn",
         "no-use-before-define": "warn",
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "no-await-in-loop": "warn",
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/no-namespace": "off",
         "import/extensions": [
