--- a/lib.geoip/.eslintrc
+++ b/lib.geoip/.eslintrc
@@ -22,6 +22,7 @@
         "no-await-in-loop": "warn",
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/no-namespace": "off",
+        "@typescript-eslint/ban-ts-ignore": "warn",
         "import/extensions": [
             "error",
             "ignorePackages",
