--- a/lib.sms/.prettierrc
+++ b/lib.sms/.prettierrc
@@ -1,11 +1,10 @@
 {
-    "printWidth": 120,
+    "printWidth": 160,
     "tabWidth": 4,
     "singleQuote": true,
     "trailingComma": "none",
     "bracketSpacing": true,
     "semi": true,
     "useTabs": true,
-    "parser": "typescript",
-    "jsxBracketSameLine": false
+    "parser": "typescript"
 }
