--- a/lib.sms/.mocharc.json
+++ b/lib.sms/.mocharc.json
@@ -3,8 +3,14 @@
     "color": true,
     "recursive": true,
     "watch": true,
-    "require": "esm",
+    "watch-extensions": [
+        "ts"
+    ],
+    "require": [
+        "esm",
+        "ts-node/register"
+    ],
     "spec": [
-        "test/**/*.spec.js"
+        "test/**/*.spec.ts"
     ]
 }
