--- a/lib.firewall/.eslintrc
+++ b/lib.firewall/.eslintrc
@@ -19,6 +19,8 @@
         "no-param-reassign": "warn",
         "no-use-before-define": "warn",
         "no-await-in-loop": "warn",
+        "no-continue": "warn",
+        "no-case-declarations": "warn",
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/ban-ts-ignore": "warn",
