--- a/lib.firewall/package.json
+++ b/lib.firewall/package.json
@@ -37,6 +37,7 @@
         "xss": "^1.0.6"
     },
     "devDependencies": {
+        "@marin/json-schemas": "file:../json-schemas",
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@types/chai": "^4.2.7",
         "@types/mocha": "^5.2.7",
