--- a/lib.rest-api/package.json
+++ b/lib.rest-api/package.json
@@ -33,16 +33,14 @@
         "node": "12.8.0"
     },
     "dependencies": {
-        "@marin/lib.auth-controller": "file:../lib.auth-controller",
         "@marin/lib.error": "file:../lib.error",
         "@marin/lib.jwt": "file:../lib.jwt",
         "@marin/lib.logger": "file:../lib.logger",
-        "express": "^4.17.1",
-        "express-async-handler": "^1.1.4"
+        "@marin/lib.utils": "file:../lib.utils",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "@marin/lib.module-builder": "file:../lib.module-builder",
-        "@marin/lib.utils": "file:../lib.utils",
         "@types/chai": "^4.2.7",
         "@types/express": "^4.17.1",
         "@types/mocha": "^5.2.7",
