--- a/auth-controller/tsconfig.json
+++ b/auth-controller/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "incremental": true,
         "target": "esnext",
-        "module": "esnext",
+        "module": "commonjs",
         "allowJs": true,
         "declaration": true,
         "rootDir": ".",
