--- a/lib.rest-api/package.json
+++ b/lib.rest-api/package.json
@@ -19,6 +19,7 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "test": "gulp test",
+        "debug": "npx mocha -r esm --inspect-brk",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "clean": "gulp clean",
@@ -41,12 +42,17 @@
     },
     "devDependencies": {
         "@marin/lib.module-builder": "file:../lib.module-builder",
+        "@types/bluebird": "^3.5.29",
+        "@types/body-parser": "^1.17.1",
         "@types/chai": "^4.2.7",
         "@types/express": "^4.17.1",
         "@types/mocha": "^5.2.7",
         "@types/node": "^13.5.0",
+        "@types/redis-mock": "^0.17.0",
         "@typescript-eslint/eslint-plugin": "^2.17.0",
         "@typescript-eslint/parser": "^2.17.0",
+        "bluebird": "^3.5.29",
+        "body-parser": "^1.17.1",
         "chai": "^4.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
@@ -57,6 +63,7 @@
         "mocha": "^7.0.0",
         "nyc": "^15.0.0",
         "prettier": "^1.19.1",
+        "redis-mock": "^0.48.0",
         "ts-node": "^8.6.2",
         "typescript": "^3.7.5"
     }
