--- a/lib.utils/package.json
+++ b/lib.utils/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
     "build": "gulp build",
     "test": "gulp test",
+    "debug": "npx mocha -r esm --inspect-brk",
     "coverage": "gulp coverage",
     "coverage:show": "gulp coverageShow",
     "clean": "gulp clean",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@marin/lib.module-builder": "file:../lib.module-builder",
     "@types/chai": "^4.2.5",
+    "@types/chai-arrays": "^1.0.3",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/mocha": "^5.2.7",
@@ -50,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "chai": "^4.2.0",
+    "chai-arrays": "^2.0.0",
     "eslint": "^6.7.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
