Unit tests for Rest Api

--- a/lib.rest-api/tsconfig.json
+++ b/lib.rest-api/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "incremental": true,
         "target": "esnext",
-        "module": "CommonJS",
+        "module": "commonjs",
         "allowJs": true,
         "declaration": true,
         "rootDir": ".",
