--- a/lib.geoip/package.json
+++ b/lib.geoip/package.json
@@ -18,6 +18,7 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "test": "gulp test",
+        "debug": "npx mocha -r esm --inspect-brk",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "clean": "gulp clean",
