--- a/lib.geoip/tsconfig.json
+++ b/lib.geoip/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "incremental": true,
         "target": "esnext",
-        "module": "esnext",
+        "module": "CommonJS",
         "allowJs": true,
         "declaration": true,
         "rootDir": ".",
