--- a/configuration/package.json
+++ b/configuration/package.json
@@ -1,11 +1,8 @@
 {
-    "name": "@marin/lib.rest-api",
-    "description": "REST API for exposed services",
+    "name": "configuration",
+    "description": "Configuration for Auth Microservice",
     "keywords": [
-        "rest",
-        "api",
-        "http",
-        "services"
+        "config"
     ],
     "version": "0.0.1-beta",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
@@ -19,9 +16,9 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "test": "gulp test",
-        "debug": "npx mocha -r esm --inspect-brk",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
+        "debug": "npx mocha -r esm --inspect-brk",
         "clean": "gulp clean",
         "purge": "gulp purge"
     },
@@ -34,36 +31,26 @@
         "node": "12.8.0"
     },
     "dependencies": {
-        "@marin/lib.error": "file:../lib.error",
-        "@marin/lib.jwt": "file:../lib.jwt",
-        "@marin/lib.logger": "file:../lib.logger",
-        "@marin/lib.utils": "file:../lib.utils",
-        "express": "^4.17.1"
+        "@marin/lib.utils": "file:../lib.utils"
     },
     "devDependencies": {
+        "@marin/lib.rest-api": "file:../lib.rest-api",
         "@marin/lib.module-builder": "file:../lib.module-builder",
-        "@types/bluebird": "^3.5.29",
-        "@types/body-parser": "^1.17.1",
-        "@types/chai": "^4.2.7",
-        "@types/express": "^4.17.1",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^13.5.0",
-        "@types/redis-mock": "^0.17.0",
-        "@typescript-eslint/eslint-plugin": "^2.17.0",
-        "@typescript-eslint/parser": "^2.17.0",
-        "bluebird": "^3.5.29",
-        "body-parser": "^1.17.1",
+        "@types/chai": "^4.2.8",
+        "@types/mocha": "^7.0.1",
+        "@types/node": "^13.7.0",
+        "@typescript-eslint/eslint-plugin": "^2.19.0",
+        "@typescript-eslint/parser": "^2.19.0",
         "chai": "^4.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.9.0",
-        "eslint-plugin-import": "^2.20.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
-        "mocha": "^7.0.0",
+        "mocha": "^7.0.1",
         "nyc": "^15.0.0",
         "prettier": "^1.19.1",
-        "redis-mock": "^0.48.0",
         "ts-node": "^8.6.2",
         "typescript": "^3.7.5"
     }
